# reaction-diffusion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  reactdiffuse.c
src/: main.c  main.cpp  reactdiffuse.c  reactdiffuse.cpp  reactdiffuse.h
